# Architecture_Course_Homework

./: CMakeLists.txt  change_velocity_command.h  change_velocity_tests.h  collision_check.cpp  collision_check.h  collision_check_tests.h  commands.cpp  commands.h  exceptions.h  exeption_handling_test.h  exeptions.h  fuel_commands.cpp  fuel_commands.h  macro_command_tests.h  main.cpp  motion.h  objects.h  process_fuel_tests.h  rotation.h
.github/workflows/: cmake.yml
